@@ -1,5 +1,6 @@
 #! /bin/sh
-# Copyright (C) 1997, 1999, 2000, 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 1997, 1999, 2000, 2001, 2002, 2010 Free Software
+# Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,6 +19,8 @@
 
 required=libtool
 . ./defs || Exit 1
+
+set -e
 
 cat >> configure.in << 'END'
 AC_PROG_CC
@@ -39,5 +42,6 @@ END
 : > q.c
 
 $ACLOCAL || Exit 1
-$AUTOMAKE 2>&1 | grep LDADD || Exit 1
+AUTOMAKE_fails
+grep LDADD stderr || Exit 1
 Exit 0
