@@ -1,3 +1,11 @@
+2010-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Prefer AUTOMAKE_fails over `$AUTOMAKE | grep' in tests.
+	* tests/ldadd.test: Enable errexit.  Use AUTOMAKE_fails so
+	the verbose log contains all output.
+	* tests/mdate.test: Likewise.
+	Prompted by Stefano Lattarini's change to discover.test.
+
 2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Improve tests link*.test (enable `errexit' shell flag).
